Fix welcome txt on small devices

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -153,6 +153,7 @@ header .row {
   margin: 0;
   justify-content: center;
   align-items: center;
+  // flex-direction: column;
 }
 
 .logo-menu {
@@ -184,7 +185,7 @@ header .row {
   font-style: italic;
   letter-spacing: -1px;
   font-weight: normal;
-  @media (max-width: 800px) {
+  @media (max-width: 700px) {
     font-size: 20px;
   }
 }
@@ -199,10 +200,10 @@ header .row {
   padding-top: 20px;
   padding-bottom: 50px;
   @media (min-width: 277px) and (max-width: 800px) {
-    font-size: 37px;
+    font-size: 25px;
   }
   @media (max-width: 276px) {
-    font-size: 25px;
+    font-size: 15px;
   }
   @media (max-width: 570px) {
     padding-bottom: 10px;
@@ -221,6 +222,9 @@ header .row {
   border-radius: 4px;
   text-decoration: none;
   transition: $transition;
+  @media (max-width: 570px) {
+    font-size: 10px;
+  }
 }
 
 .btn:hover {
